--- a/css/styles.css
+++ b/css/styles.css
@@ -823,6 +823,23 @@ img {
   margin-bottom: 20px;
 }
 
+.footer-form-input {
+  width: 358px;
+  height: 50px;
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+  border-radius: 4px;
+  background-color: transparent;
+  padding: 15px 16px;
+  color: rgba(255, 255, 255, 0.6);
+  font-weight: 400;
+  font-size: 16px;
+  line-height: calc(20 / 16);
+  align-items: center;
+  letter-spacing: 0.03em;
+  margin-right: 12px;
+}
+
 .footer-btn {
   width: 200px;
   height: 50px;
@@ -830,11 +847,19 @@ img {
   background: #2196f3;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
-  /* display: flex; */
+  border-color: transparent;
+  display: inline-flex;
   align-items: center;
   text-align: center;
+  justify-content: center;
+  gap: 10px;
   font-weight: 700;
   font-size: 16px;
   line-height: calc(30 / 16);
   letter-spacing: 0.06em;
+  cursor: pointer;
 }
+
+/* .footer-form {
+  margin-left: 93px;
+} */
