--- a/css/styles.css
+++ b/css/styles.css
@@ -401,6 +401,13 @@ img {
   text-align: left;
   gap: 4px;
 }
+.form-input {
+  position: relative;
+}
+
+.form-icon {
+  position: absolute;
+}
 
 /* Feature section */
 
@@ -853,6 +860,7 @@ img {
   border: 1px solid rgba(255, 255, 255, 0.3);
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
   border-radius: 4px;
+  outline: transparent;
   background-color: transparent;
   padding: 15px 16px;
   color: rgba(255, 255, 255, 0.6);
