--- a/css/styles.css
+++ b/css/styles.css
@@ -336,9 +336,10 @@ img {
   /* position: absolute; */
   left: 50%;
   top: 50%;
+  padding: 40px;
 
   width: 528px;
-  height: 581px;
+  min-height: 581px;
   background-color: #ffffff;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
@@ -376,11 +377,16 @@ img {
   border: 1px solid rgba(0, 0, 0, 0.1);
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
   cursor: pointer;
+  transition: fill var(--animation);
+}
+
+.modal-btn:hover {
+  fill: #2196f3;
 }
 
 .form-title {
   display: block;
-  margin-bottom: 12px;
+  margin-bottom: 30px;
   font-weight: 700;
   font-size: 20px;
   line-height: calc(23 / 20);
@@ -390,23 +396,150 @@ img {
 }
 
 .modal-form {
-  padding: 40px;
-  display: flex;
-  flex-direction: column;
+  text-align: center;
 }
 
 .form-group {
-  display: flex;
-  flex-direction: column;
-  text-align: left;
-  gap: 4px;
+  margin-bottom: 20px;
 }
-.form-input {
+
+.form-wrap {
   position: relative;
+  display: block;
+  margin-bottom: 10px;
+
+  /* flex-direction: column;
+  text-align: left;
+  gap: 10px; */
+}
+
+.form-wrap:last-child {
+  margin-bottom: 0;
+}
+
+.form-label {
+  display: block;
+  text-align: left;
+  margin-bottom: 4px;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: calc(14 / 12);
+  letter-spacing: 0.01em;
+  color: #757575;
+}
+
+.form-input,
+.form-message {
+  width: 100%;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+  padding: 11px;
+  padding-left: 42px;
+  outline: transparent;
+  transition: border-color var(--animation);
+}
+
+.form-input:focus,
+.form-message:focus {
+  border-color: #2196f3;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+.form-input:focus + .form-icon {
+  fill: #2196f3;
+}
+
+.form-message {
+  resize: none;
+  height: 120px;
+  padding: 12px 16px;
+}
+
+.form-message::placeholder {
+  font-weight: 400;
+  font-size: 12px;
+  line-height: calc(14 / 12);
+  letter-spacing: 0.01em;
+  color: rgba(117, 117, 117, 0.5);
 }
 
 .form-icon {
   position: absolute;
+  bottom: 11px;
+  left: 12px;
+}
+
+.form-agreement {
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: left;
+  gap: 8px;
+  margin-bottom: 30px;
+}
+
+.form-icon-checkbox {
+  position: absolute;
+  height: 50%;
+  left: 0;
+}
+
+.form-checkbox:checked + .form-icon-checkbox .form-icon-uncheck {
+  opacity: 0;
+}
+
+.form-checkbox:checked + .form-icon-checkbox .form-icon-check {
+  opacity: 1;
+}
+
+.form-icon-check {
+  opacity: 0;
+  transition: opacity var(--animation);
+}
+
+.form-agreement-text {
+  user-select: none;
+  text-underline-position: under;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: calc(24 / 14);
+  letter-spacing: 0.03em;
+
+  color: #757575;
+}
+
+.form-agreement-link {
+  text-decoration-line: underline;
+  color: #2196f3;
+}
+
+.modal-form-btn {
+  display: inline-flex;
+  align-items: center;
+  text-align: center;
+  justify-content: center;
+  padding: 10px 55px;
+  cursor: pointer;
+  width: 200px;
+  height: 50px;
+
+  background-color: #2196f3;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: calc(30 / 16);
+  letter-spacing: 0.06em;
+  color: #fff;
+
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+  border-color: transparent;
+  transition: background-color var(--animation);
+}
+
+.modal-form-btn:hover {
+  background: #188ce8;
 }
 
 /* Feature section */
@@ -797,7 +930,11 @@ img {
 .footer-content {
   display: flex;
   align-items: baseline;
-  gap: 70px;
+  /* gap: 70px; */
+}
+
+.footer-address {
+  margin-right: 70px;
 }
 
 .footer-socials {
@@ -805,6 +942,7 @@ img {
   align-items: baseline;
   justify-content: center;
   flex-wrap: wrap;
+  margin-right: 93px;
 }
 
 .footer-title {
@@ -867,13 +1005,17 @@ img {
   font-weight: 400;
   font-size: 16px;
   line-height: calc(20 / 16);
-  align-items: center;
+
   letter-spacing: 0.03em;
   margin-right: 12px;
 }
 
 .footer-btn {
   display: inline-flex;
+  align-items: center;
+  text-align: center;
+  justify-content: center;
+  gap: 10px;
   width: 200px;
   height: 50px;
   color: #fff;
@@ -881,10 +1023,7 @@ img {
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
   border-color: transparent;
-  align-items: center;
-  text-align: center;
-  justify-content: center;
-  gap: 10px;
+
   font-weight: 700;
   font-size: 16px;
   line-height: calc(30 / 16);
@@ -892,6 +1031,9 @@ img {
   cursor: pointer;
 }
 
-/* .footer-form {
-  margin-left: 93px;
-} */
+.footer-form-label {
+  display: flex;
+  align-items: center;
+  text-align: center;
+  justify-content: center;
+}
